--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Link to bootstrap theme css -->
+    <!-- url_for takes two arguments: directory to look for file- "static" and file name or path to file name - 'filename' -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
     <title>Hello Flask</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <ul>
             <!-- url_for( has to coresspond the views names ) -->
             <li><a href="{{ url_for('index') }}">Home</a></li> 
